webpack loader + frequently used components

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "^7.0.2",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "url-loader": "^1.1.2"
   },
   "devDependencies": {}
 }
