art-method site first commit

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "three-full": "^11.3.2",
     "url-loader": "^1.1.2"
   },
   "devDependencies": {}
